# clam

./: .clang-format  .gitignore  .gitmodules  .prettierrc  Cargo.toml  LICENSE.TXT  Makefile  flake.nix
src/: main.c  main.cpp  main.rs
